# NUECSDC_2026_CTR

./: .gitignore  README.md
1main_controller/: environment_dector.sh  environmental_monitoring.py  land_test.py  main_task_ircc_1.py  main_task_ircc_2.py  main_task_raicom.py  main_task_raicomAA.py  main_task_raicomAB.py  main_task_raicomBA.py  main_task_raicomBB.py  move_test1.py  move_test2.py  takeoff_airdetect.sh
1main_controller/test/: GPIO_controller.py  flight_test.py  flight_test_raicom.py  gripper_controller1.py  gripper_controller2.py  opencv_test.py  publisher.py  real-time_drone_coordinate.py  sensor_output.py  target_point.py  tof_sensor.py  tools_tester.py
1main_controller/tools/: assessment_library.py  gpio_controller.py  gripper_controller.py  ground_circle_detector.py  letters_detector.py  position_checker_ros2.py  tof_sensor.py  vision_node.py
catkin_ws_ego_planner/: 开发日志.txt
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/bspline_opt/src/: bspline_optimizer.cpp
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/plan_env/src/: grid_map.cpp
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/plan_manage/: CMakeLists.txt  package.xml
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/plan_manage/include/ego_planner/: ego_replan_fsm.h  planner_manager.h
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/plan_manage/launch/: airdetect_advanced_param.launch.py  airdetect_single_run_in_sim.launch.py  default.rviz  largemodel_advanced_param.launch.py  largemodel_single_run_in_sim.launch.py  run_in_sim.launch.py  simulator.launch.py  swarm.launch.py  swarm_large.launch.py
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/plan_manage/src/: airdetect_egoctrl_v1.cpp  ego_replan_fsm.cpp  largemodel_egoctrl_v1.cpp  planner_manager.cpp  traj_server.cpp
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/planner/plan_manage/srv/: SetPosition.srv
catkin_ws_ego_planner/src/ego-planner-swarm-ros2_version/src/uav_simulator/local_sensing/src/: pcl_render_node.cpp  pointcloud_render_node.cpp
catkin_ws_fastlio/src/FAST_LIO/config/: mid360.yaml
catkin_ws_fastlio/src/FAST_LIO/rviz/: fastlio.rviz
catkin_ws_fastlio/src/FAST_LIO/src/: laserMapping.cpp
mnt_ws/: README-NOMACHINE  laser
mnt_ws/Air_detection_ws/: 功能说明.txt
mnt_ws/Air_detection_ws/src/main_controller/: setup.py
mnt_ws/Air_detection_ws/src/main_controller/main_controller/: Air_detect.py  UAV_utils.py
mnt_ws/NX/: nxserver  功能说明.txt
mnt_ws/NX/etc/NX/server/localhost/: server.cfg.sample
mnt_ws/UAVMain_ws/: 功能说明.txt
mnt_ws/UAVMain_ws/src/interface/: CMakeLists.txt  package.xml
mnt_ws/UAVMain_ws/src/interface/srv/: SetPosition.srv
mnt_ws/UAVMain_ws/src/main_controller/: package.xml  setup.py
mnt_ws/UAVMain_ws/src/main_controller/main_controller/: UAVController.py  UAV_utils.py  data_procure.py  demo1 copy 2.py  demo1.py  position_checker_ros2.py  take_picture.py
mnt_ws/deepseek_ws/src/deepseek_llm_ros/: package.xml  setup.cfg  setup.py
mnt_ws/deepseek_ws/src/deepseek_llm_ros/deepseek_llm_ros/: deepseek_ros2.py
mnt_ws/lubancat_ai_manual_code/: 功能说明.txt
mnt_ws/lubancat_ai_manual_code/example/yolov5/cpp/: CMakeLists.txt  pnp.cc  postprocess.cc  postprocess.h  yolov5_image_demo.cc  yolov5_videocapture_demo.cc  yolov5_videocapture_demo_backup.cc
mnt_ws/lubancat_ai_manual_code/example/yolov5_seg/cpp/: yolov5seg_videocapture_demo.cc
mnt_ws/mavros_ws/: 功能说明.txt
mnt_ws/mavros_ws/src/mavros-ros2/mavros/launch/: px4.launch
mnt_ws/other/: LandNode.py  get_hsv.py  no_jibian(1).py  visualize_position.py  功能说明.txt
mnt_ws/ros2help_ws/base/: base.cpp  ros2help
mnt_ws/ros2help_ws/src/: CMakeLists.txt
mnt_ws/ros2help_ws/src/try/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros2help
mnt_ws/ros2help_ws/src/try/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
mnt_ws/serial_ws/: 功能说明.txt
mnt_ws/serial_ws/src/joe_pkg/: CMakeLists.txt  package.xml
mnt_ws/serial_ws/src/joe_pkg/src/: interface_mavros.cpp  mid_360.cpp  node_01.cpp  pwm_ctl.cpp  pwm_pub.cpp  quad2Euler.cpp  setpoint.cpp
mnt_ws/serial_ws/src/joe_pkg/src/backup/: creat_node_template  creat_timer_template  interface_aim_position_mavros  node_01_backup0  pwm_ctl_backup  pwm_ctl_backup_lastest
mnt_ws/vision_ws/: 功能说明.txt
mnt_ws/vision_ws/src/vision_detect/: package.xml  setup.cfg  setup.py
mnt_ws/vision_ws/src/vision_detect/vision_detect/: color_rec_server_params.py  color_rec_server_params_2.py  color_rec_server_params_backup.py
ubuntu20.04_local/: consumer.py  qt5_gui_viewer.py  simulated_sensor.py  visual_environmental_monitoring.py
(+1 files in other folders)
