<?xml version="1.0"?>
<package format="3">
  <name>interface</name>
  <version>0.0.0</version>
  <description>Custom interface package</description>
  <maintainer email="elf@todo.todo">elf</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 声明该包属于 rosidl_interface_packages 组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>